--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gatsby-plugin-output",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "description": "Gatsby plugin to change build output folder",
   "main": "index.js",
   "scripts": {
@@ -17,7 +17,8 @@
   "keywords": [
     "gatsby",
     "gatsby-plugin",
-    "output",
+    "gatsby-plugin-output",
+    "output dir",
     "build folder"
   ],
   "author": "ThunderMiracle",
